--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -1218,6 +1218,99 @@
    "source": [
     "    Unfortunately this looks like multiple sources of error, in an attempt to keep the timeline moving I will obtain 1 last insight before accepting this error & attempting the DB tree in SQL"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Ser              combined\n",
+      "149    150                   NaN\n",
+      "338    339                   NaN\n",
+      "339    340                   NaN\n",
+      "532    533                   NaN\n",
+      "533    534                   NaN\n",
+      "...    ...                   ...\n",
+      "4475  4476    Transportation x x\n",
+      "4476  4477              Aircraft\n",
+      "4477  4478  Aviation Accessories\n",
+      "4478  4479        Aviation Parts\n",
+      "4479  4480               Bicycle\n",
+      "\n",
+      "[258 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "modified_array = [x - 1 for x in listOfAllErrors]; print(df.iloc[modified_array])\n",
+    "\n",
+    "# print(df.iloc[listOfAllErrors])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Ser                          combined\n",
+      "149    150                               NaN\n",
+      "338    339                               NaN\n",
+      "532    533                               NaN\n",
+      "746    747                               NaN\n",
+      "924    925                               NaN\n",
+      "1008  1009                               NaN\n",
+      "1067  1068                               NaN\n",
+      "1313  1314                               NaN\n",
+      "1381  1382                               NaN\n",
+      "1464  1465                               NaN\n",
+      "1508  1509                               NaN\n",
+      "1542  1543                               NaN\n",
+      "1557  1558                               NaN\n",
+      "1563  1564                               NaN\n",
+      "1642  1643                               NaN\n",
+      "1812  1813                               NaN\n",
+      "1947  1948                               NaN\n",
+      "1991  1992                               NaN\n",
+      "2014  2015                               NaN\n",
+      "2071  2072                               NaN\n",
+      "2341  2342                               NaN\n",
+      "2510  2511                               NaN\n",
+      "2576  2577  Other Lights & Lighting Products\n",
+      "2629  2630                           Wallets\n",
+      "2630  2631                               NaN\n",
+      "2660  2661              Bag Making Machinery\n",
+      "3035  3036       Woodworking Machinery Parts\n",
+      "3117  3118                   Weighing Scales\n",
+      "3203  3204                            Valves\n",
+      "3248  3249         Other Fiberglass Products\n",
+      "3384  3385                              Zinc\n",
+      "3545  3546                       Yellow Page\n",
+      "3600  3601                         Strapping\n",
+      "3676  3677                     Rubber Stocks\n",
+      "3760  3761                     Safety Helmet\n",
+      "3815  3816                  Wedding Supplies\n",
+      "3868  3869                        Used Shoes\n",
+      "3963  3964                       Camping Mat\n",
+      "4066  4067                Sleds & Snow Tubes\n",
+      "4114  4115               Mobile Phone Straps\n",
+      "4256  4257                      Spandex Yarn\n",
+      "4312  4313                      Wristwatches\n",
+      "4402  4403                        Used Tools\n",
+      "4472  4473                      Wind Up Toys\n"
+     ]
+    }
+   ],
+   "source": [
+    "modified_array = [x - 1 for x in listOfCollisions]; print(df.iloc[modified_array])\n"
+   ]
   }
  ],
  "metadata": {
