--- a/db upload/tree upload/Tree upload NB.ipynb
+++ b/db upload/tree upload/Tree upload NB.ipynb
@@ -239,6 +239,13 @@
    "source": [
     "df.head(15)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Now the next step is to take our tree from slimtree.xlsx, convert all pointers in the dataset from cat to ser (so the DB can eat them as int), & upload it"
+   ]
   }
  ],
  "metadata": {
