--- a/db upload/tree upload/Tree upload NB.ipynb
+++ b/db upload/tree upload/Tree upload NB.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "14   15               Animal Extract"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,6 +245,29 @@
    "metadata": {},
    "source": [
     "    Now the next step is to take our tree from slimtree.xlsx, convert all pointers in the dataset from cat to ser (so the DB can eat them as int), & upload it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   ser                       cat\n",
+      "0    1               Agriculture\n",
+      "1    2    Agricultural Equipment\n",
+      "2    3  Agricultural Greenhouses\n",
+      "3    4     Aquaculture Equipment\n",
+      "4    5          Aquaculture Trap\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfT = pd.read_excel(\"slimTree.xlsx\")\n",
+    "print(df.head())"
    ]
   }
  ],
