cast -1 to leaf

--- a/db upload/tree upload/Tree upload NB.ipynb
+++ b/db upload/tree upload/Tree upload NB.ipynb
@@ -249,26 +249,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   ser                       cat\n",
-      "0    1               Agriculture\n",
-      "1    2    Agricultural Equipment\n",
-      "2    3  Agricultural Greenhouses\n",
-      "3    4     Aquaculture Equipment\n",
-      "4    5          Aquaculture Trap\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>category</th>\n",
+       "      <th>subcategory</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "      <td>Agricultural Greenhouses</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Agricultural Greenhouses</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "      <td>Aquaculture Trap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "      <td>Fishing Float</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "      <td>Fishing Net</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    category               subcategory\n",
+       "0                Agriculture    Agricultural Equipment\n",
+       "1     Agricultural Equipment  Agricultural Greenhouses\n",
+       "2   Agricultural Greenhouses                       NaN\n",
+       "3                Agriculture    Agricultural Equipment\n",
+       "4     Agricultural Equipment     Aquaculture Equipment\n",
+       "5      Aquaculture Equipment                       NaN\n",
+       "6                Agriculture    Agricultural Equipment\n",
+       "7     Agricultural Equipment     Aquaculture Equipment\n",
+       "8      Aquaculture Equipment          Aquaculture Trap\n",
+       "9                Agriculture    Agricultural Equipment\n",
+       "10    Agricultural Equipment     Aquaculture Equipment\n",
+       "11     Aquaculture Equipment             Fishing Float\n",
+       "12               Agriculture    Agricultural Equipment\n",
+       "13    Agricultural Equipment     Aquaculture Equipment\n",
+       "14     Aquaculture Equipment               Fishing Net"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "dfT = pd.read_excel(\"slimTree.xlsx\")\n",
-    "print(df.head())"
+    "dfT.head(15)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Lets start by casting -1 to all leafs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>category</th>\n",
+       "      <th>subcategory</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "      <td>Agricultural Greenhouses</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Agricultural Greenhouses</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "      <td>Aquaculture Trap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "      <td>Fishing Float</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "      <td>Fishing Net</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    category               subcategory\n",
+       "0                Agriculture    Agricultural Equipment\n",
+       "1     Agricultural Equipment  Agricultural Greenhouses\n",
+       "2   Agricultural Greenhouses                        -1\n",
+       "3                Agriculture    Agricultural Equipment\n",
+       "4     Agricultural Equipment     Aquaculture Equipment\n",
+       "5      Aquaculture Equipment                        -1\n",
+       "6                Agriculture    Agricultural Equipment\n",
+       "7     Agricultural Equipment     Aquaculture Equipment\n",
+       "8      Aquaculture Equipment          Aquaculture Trap\n",
+       "9                Agriculture    Agricultural Equipment\n",
+       "10    Agricultural Equipment     Aquaculture Equipment\n",
+       "11     Aquaculture Equipment             Fishing Float\n",
+       "12               Agriculture    Agricultural Equipment\n",
+       "13    Agricultural Equipment     Aquaculture Equipment\n",
+       "14     Aquaculture Equipment               Fishing Net"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfT.fillna('-1', inplace=True); dfT.head(15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    & then lets try replacing everything where needed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
