check for non ints

--- a/db upload/tree upload/Tree upload NB.ipynb
+++ b/db upload/tree upload/Tree upload NB.ipynb
@@ -1315,7 +1315,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Perfect, do I dare try to upload this?"
+    "    Perfect, do I dare try to upload this? Lets check for issues first"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Non ints are at:\n",
+      "Empty DataFrame\n",
+      "Columns: [category, subcategory]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_not_int(val):\n",
+    "    return not isinstance(val, int)\n",
+    "\n",
+    "non_int_mask = dfIntUnique.map(is_not_int)\n",
+    "non_int_locations = dfIntUnique[non_int_mask]\n",
+    "\n",
+    "print(\"Non ints are at:\"); print(non_int_locations.dropna())\n"
    ]
   }
  ],
