--- a/db upload/tree upload/Tree upload NB.ipynb
+++ b/db upload/tree upload/Tree upload NB.ipynb
@@ -1343,6 +1343,58 @@
     "\n",
     "print(\"Non ints are at:\"); print(non_int_locations.dropna())\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    My favorite part was when they said ITS UPLOADING TIME & uploaded all over the place"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def get_category_subcategory(df, index):\n",
+    "    num = df.loc[index, \"Ser\"]  # O( log(n) )\n",
+    "    name = df.loc[index, \"combined\"]\n",
+    "    return name, num\n",
+    "\n",
+    "\n",
+    "def process_categories(df, cursor, con, start, end):\n",
+    "    listOfCollisions = []\n",
+    "    listOfAllErrors = []\n",
+    "    j = 0\n",
+    "\n",
+    "    for i in range(start, end):  # O(n)\n",
+    "        name, num = get_category_subcategory(df, i)\n",
+    "        num = str(num)\n",
+    "\n",
+    "        try:\n",
+    "            cursor.execute(\n",
+    "                \"\"\"INSERT INTO \"Categories\" (category_id, category) VALUES (%s, %s)\"\"\",\n",
+    "                (num, name),\n",
+    "            )  # O(n)\n",
+    "        except psycopg2.errors.UniqueViolation as e:\n",
+    "            listOfAllErrors.append(i)\n",
+    "            listOfCollisions.append(i)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error occurred: {e}\")\n",
+    "            listOfAllErrors.append(i)\n",
+    "\n",
+    "        if j == 10:\n",
+    "            con.commit()\n",
+    "            j = 0  # this time we will commit for each 10th entry\n",
+    "        j = j + 1\n",
+    "\n",
+    "    con.commit()\n",
+    "\n",
+    "    print(len(listOfCollisions), len(listOfAllErrors))\n",
+    "    return listOfCollisions, listOfAllErrors"
+   ]
   }
  ],
  "metadata": {
