--- a/db upload/tree upload/Tree upload NB.ipynb
+++ b/db upload/tree upload/Tree upload NB.ipynb
@@ -1359,28 +1359,23 @@
    "source": [
     "\n",
     "def get_category_subcategory(df, index):\n",
-    "    num = df.loc[index, \"Ser\"]  # O( log(n) )\n",
-    "    name = df.loc[index, \"combined\"]\n",
-    "    return name, num\n",
+    "    parent = df.loc[index, \"category\"]                                                                     # O( log(n) )\n",
+    "    child = df.loc[index, \"subcategory\"]\n",
+    "    return parent, child\n",
     "\n",
     "\n",
     "def process_categories(df, cursor, con, start, end):\n",
-    "    listOfCollisions = []\n",
-    "    listOfAllErrors = []\n",
+    "    listOfCollisions = []; listOfAllErrors = []\n",
     "    j = 0\n",
     "\n",
-    "    for i in range(start, end):  # O(n)\n",
-    "        name, num = get_category_subcategory(df, i)\n",
-    "        num = str(num)\n",
+    "    for i in range(start, end):                                                                         # O(n)\n",
+    "        parent, child = get_category_subcategory(df, i)\n",
     "\n",
     "        try:\n",
     "            cursor.execute(\n",
-    "                \"\"\"INSERT INTO \"Categories\" (category_id, category) VALUES (%s, %s)\"\"\",\n",
-    "                (num, name),\n",
-    "            )  # O(n)\n",
+    "                \"\"\"INSERT INTO \"Category_Tree\" (category_id, sub_category_id) VALUES (%s, %s)\"\"\", (parent, child),)   # O(n)\n",
     "        except psycopg2.errors.UniqueViolation as e:\n",
-    "            listOfAllErrors.append(i)\n",
-    "            listOfCollisions.append(i)\n",
+    "            listOfAllErrors.append(i); listOfCollisions.append(i)\n",
     "        except Exception as e:\n",
     "            print(f\"Error occurred: {e}\")\n",
     "            listOfAllErrors.append(i)\n",
