--- a/db upload/tree upload/Tree upload NB.ipynb
+++ b/db upload/tree upload/Tree upload NB.ipynb
@@ -1353,13 +1353,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def get_category_subcategory(df, index):\n",
-    "    parent = df.loc[index, \"category\"]                                                                     # O( log(n) )\n",
+    "    parent = df.loc[index, \"category\"]                                                                                  # O( log(n) )\n",
     "    child = df.loc[index, \"subcategory\"]\n",
     "    return parent, child\n",
     "\n",
@@ -1368,12 +1368,12 @@
     "    listOfCollisions = []; listOfAllErrors = []\n",
     "    j = 0\n",
     "\n",
-    "    for i in range(start, end):                                                                         # O(n)\n",
+    "    for i in range(start, end):                                                                                         # O(n)\n",
     "        parent, child = get_category_subcategory(df, i)\n",
     "\n",
     "        try:\n",
     "            cursor.execute(\n",
-    "                \"\"\"INSERT INTO \"Category_Tree\" (category_id, sub_category_id) VALUES (%s, %s)\"\"\", (parent, child),)   # O(n)\n",
+    "                \"\"\"INSERT INTO \"Category_Tree\" (category_id, sub_category_id) VALUES (%s, %s)\"\"\", (parent, child),)     # O(n)\n",
     "        except psycopg2.errors.UniqueViolation as e:\n",
     "            listOfAllErrors.append(i); listOfCollisions.append(i)\n",
     "        except Exception as e:\n",
@@ -1389,6 +1389,30 @@
     "\n",
     "    print(len(listOfCollisions), len(listOfAllErrors))\n",
     "    return listOfCollisions, listOfAllErrors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listOfCollisions = []\n",
+    "listOfAllErrors = []\n",
+    "\n",
+    "# wipe the db from DBeaver\n",
+    "\n",
+    "con = psycopg2.connect(database=\"iSupply\", host=\"38.180.117.52\", user=\"postgres\", password=\"deerRun\", port=\"5432\" ); cursor = con.cursor()  # open\n",
+    "\n",
+    "for i in range(2):  # first 200\n",
+    "    collisions, errors = process_categories(\n",
+    "        dfIntUnique, cursor, con, (100 * i), ((100 * i) + 100)\n",
+    "    )\n",
+    "    listOfCollisions += collisions\n",
+    "    listOfAllErrors += errors\n",
+    "    print(\"100 number \", (i + 1), \" done\")\n",
+    "\n",
+    "cursor.close(); con.close()  # close"
    ]
   }
  ],
