--- a/db upload/tree upload/Tree upload NB.ipynb
+++ b/db upload/tree upload/Tree upload NB.ipynb
@@ -1878,6 +1878,69 @@
    "source": [
     "    Perfect, time to implement"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_category_subcategory(df, index):\n",
+    "    parent = str(df.loc[index, \"category\"])                                                                                  # O( log(n) )\n",
+    "    child = str(df.loc[index, \"subcategory\"])\n",
+    "    return parent, child\n",
+    "\n",
+    "\n",
+    "def process_categories(df, cursor, con, start, end):\n",
+    "    listOfCollisions = []; listOfAllErrors = []\n",
+    "    j = 0\n",
+    "\n",
+    "    for i in range(start, end):                                                                                         # O(n)\n",
+    "        parent, child = get_category_subcategory(df, i)\n",
+    "\n",
+    "        try:\n",
+    "            cursor.execute(\n",
+    "                \"\"\"INSERT INTO \"Category_Tree\" (category_id, sub_category_id) VALUES (\"\"\" + parent + \"\"\", \"\"\" + child + \"\"\")\"\"\")    # O(n)\n",
+    "        except psycopg2.errors.UniqueViolation as e:\n",
+    "            listOfAllErrors.append(i); listOfCollisions.append(i)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error occurred: {e}\")\n",
+    "            listOfAllErrors.append(i)\n",
+    "\n",
+    "        if j == 10:\n",
+    "            con.commit()\n",
+    "            j = 0  # this time we will commit for each 10th entry\n",
+    "        j = j + 1\n",
+    "\n",
+    "    con.commit()\n",
+    "\n",
+    "    print(len(listOfCollisions), len(listOfAllErrors))\n",
+    "    return listOfCollisions, listOfAllErrors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listOfCollisions = []\n",
+    "listOfAllErrors = []\n",
+    "\n",
+    "# wipe the db from DBeaver\n",
+    "\n",
+    "con = psycopg2.connect(database=\"iSupply\", host=\"38.180.117.52\", user=\"postgres\", password=\"deerRun\", port=\"5432\" ); cursor = con.cursor()  # open\n",
+    "\n",
+    "for i in range(2):  # first 200\n",
+    "    collisions, errors = process_categories(\n",
+    "        dfIntUnique, cursor, con, (100 * i), ((100 * i) + 100)\n",
+    "    )\n",
+    "    listOfCollisions += collisions\n",
+    "    listOfAllErrors += errors\n",
+    "    print(\"100 number \", (i + 1), \" done\")\n",
+    "\n",
+    "cursor.close(); con.close()  # close"
+   ]
   }
  ],
  "metadata": {
