--- a/db upload/tree upload/Tree upload NB.ipynb
+++ b/db upload/tree upload/Tree upload NB.ipynb
@@ -1920,14 +1920,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0\n",
+      "100 number  1  done\n",
+      "0 0\n",
+      "100 number  2  done\n"
+     ]
+    }
+   ],
    "source": [
     "listOfCollisions = []\n",
     "listOfAllErrors = []\n",
-    "\n",
-    "# wipe the db from DBeaver\n",
     "\n",
     "con = psycopg2.connect(database=\"iSupply\", host=\"38.180.117.52\", user=\"postgres\", password=\"deerRun\", port=\"5432\" ); cursor = con.cursor()  # open\n",
     "\n",
