--- a/db upload/tree upload/Tree upload NB.ipynb
+++ b/db upload/tree upload/Tree upload NB.ipynb
@@ -2134,6 +2134,28 @@
    "source": [
     "    Perfect, time for the big one"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listOfCollisions = []\n",
+    "listOfAllErrors = []\n",
+    "\n",
+    "con = psycopg2.connect(database=\"iSupply\", host=\"38.180.117.52\", user=\"postgres\", password=\"deerRun\", port=\"5432\" ); cursor = con.cursor()  # open\n",
+    "\n",
+    "for i in range(154):  # first 154 00\n",
+    "    collisions, errors = process_categories(\n",
+    "        dfIntUnique, cursor, con, (100 * i), ((100 * i) + 100)\n",
+    "    )\n",
+    "    listOfCollisions += collisions\n",
+    "    listOfAllErrors += errors\n",
+    "    print(\"100 number \", (i + 1), \" done\")\n",
+    "\n",
+    "cursor.close(); con.close()  # close"
+   ]
   }
  ],
  "metadata": {
